# cplus-space-invaders

./: CMakeLists.txt  Makefile  README.md
include/: controller_console.h  drawable.h  game_model.h  model_simulator_game.h  observer.h  view_console.h
src/: CMakeLists.txt  GameModel.cpp  controller_console.cpp  drawable.cpp  game_model.cpp  main.cpp  model_simulator_game.cpp  observer.cpp  view_console.cpp
tests/: CMakeLists.txt  test_call.cpp
